feat: add validateApplicationMilestoneUpdate
