# openapi.yaml
@@ -117,6 +117,24 @@ paths:
           $ref: '#/components/responses/ErrorResponse'
         '500':
           $ref: '#/components/responses/ErrorResponse'
+  /validate/application-milestone-update:
+    post:
+      operationId: validateApplicationMilestoneUpdate
+      summary: Validate, upload & pin grant application milestone to IPFS
+      tags:
+        - Validation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApplicationMilestoneUpdate'
+      responses:
+        '200':
+          $ref: '#/components/responses/ValidationSuccessResponse'
+        '400':
+          $ref: '#/components/responses/ErrorResponse'
+        '500':
+          $ref: '#/components/responses/ErrorResponse'
 components:
   schemas:
     Error:
@@ -326,6 +344,15 @@ components:
           items:
             $ref: "#/components/schemas/SocialItem"
           maximum: 10
+    ApplicationMilestoneUpdate:
+      type: object
+      additionalProperties: false
+      required:
+        - text
+      properties:
+        text:
+          type: string
+          maximum: 2048
     GrantFieldMap:
       type: object
       additionalProperties:
