# src/routes/index.ts
@@ -1,6 +1,7 @@
 //generated file, run 'yarn generate:routes-index' to update
 
 export default {
+	validateApplicationMilestoneUpdate: async() => (await import('./validateApplicationMilestoneUpdate')).default,
 	validateGrantApplicationCreate: async() => (await import('./validateGrantApplicationCreate')).default,
 	validateGrantApplicationUpdate: async() => (await import('./validateGrantApplicationUpdate')).default,
 	validateGrantCreate: async() => (await import('./validateGrantCreate')).default,
